--- a/DataExploration.ipynb
+++ b/DataExploration.ipynb
@@ -1414,29 +1414,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/uday/.virtualenvs/data-science/lib/python2.7/site-packages/ipykernel/__main__.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  from ipykernel import kernelapp as app\n",
-      "/Users/uday/.virtualenvs/data-science/lib/python2.7/site-packages/ipykernel/__main__.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  app.launch_new_instance()\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -2013,14 +1995,14 @@
        "[891 rows x 5 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_temp = df_train[['PassengerId','Sex','Survived']]\n",
-    "df_temp['Predict'] = df_temp['Sex'].apply(lambda x: 0 if x==\"male\" else 1)\n",
+    "df_temp = df_train.loc[:,['PassengerId','Sex','Survived']]\n",
+    "df_temp['Predict'] = df_temp.Sex.apply(lambda x: 0 if x==\"male\" else 1)\n",
     "df_temp['Correct'] = (df_temp.Predict == df_temp.Survived)\n",
     "df_temp"
    ]
